src/server/actix_server/snapshots/viguno__server__actix_server__hpo_terms__test__hpo_terms_name_suffix_no_genes.snap
---
source: src/server/actix_server/hpo_terms.rs
expression: "&run_query(\"/hpo/terms?name=guinal+hernia&match=suffix\").await?"
---
version:
  hpo: 2023-04-05
  viguno: 0.0.0
query:
  term_id: ~
  name: guinal hernia
  match_: suffix
  max_results: 100
  genes: false
result:
  - term_id: "HP:0000023"
    name: Inguinal hernia

