src/server/actix_server/snapshots/viguno__server__actix_server__hpo_terms__test__hpo_terms_term_id_exact_no_genes.snap
---
source: src/server/actix_server/hpo_terms.rs
expression: "&run_query(\"/hpo/terms?term_id=HP:0000023\").await?"
---
version:
  hpo: 2023-04-05
  viguno: 0.0.0
query:
  term_id: "HP:0000023"
  name: ~
  match_: ~
  max_results: 100
  genes: false
result:
  - term_id: "HP:0000023"
    name: Inguinal hernia

